-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 14
-
Component/s: client-libs
-
b27
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8247207 | 13.0.4 | Alexey Ivanov | P3 | Resolved | Fixed | b05 |
| JDK-8240545 | 11.0.8-oracle | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8241202 | 11.0.8 | Alexey Ivanov | P3 | Resolved | Fixed | b01 |
ID2D1Factory::GetDesktopDpi is deprecated [1][2] in latest version of Windows SDK (VS 2017 / VS 2019). This call can be replaced with two calls to GetDeviceCaps(hdc, LOGPIXELSX) and GetDeviceCaps(hdc, LOGPIXELSY) to cover Windows 7 and 8.0 where GetDpiForMonitor is not available.
This change will also ditch dependency on d2d1.dll.
[1] http://mail.openjdk.java.net/pipermail/awt-dev/2019-October/015460.html
[2] http://mail.openjdk.java.net/pipermail/awt-dev/2019-November/015513.html
This change will also ditch dependency on d2d1.dll.
[1] http://mail.openjdk.java.net/pipermail/awt-dev/2019-October/015460.html
[2] http://mail.openjdk.java.net/pipermail/awt-dev/2019-November/015513.html
- backported by
-
JDK-8240545 Replace ID2D1Factory::GetDesktopDpi with GetDeviceCaps
-
- Resolved
-
-
JDK-8241202 Replace ID2D1Factory::GetDesktopDpi with GetDeviceCaps
-
- Resolved
-
-
JDK-8247207 Replace ID2D1Factory::GetDesktopDpi with GetDeviceCaps
-
- Resolved
-
- relates to
-
JDK-8229800 WindowsServerCore 1809 does not provide d2d1.dll library required by awt.dll
-
- Resolved
-
-
JDK-8233707 systemScale.cpp could not compile with VS2019
-
- Resolved
-
- links to
(2 links to)