8234398: Replace ID2D1Factory::GetDesktopDpi with GetDeviceCaps

Reviewed-by: serb, prr